--- a/src/Movies/index.scss
+++ b/src/Movies/index.scss
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+body {
+  background-color: #F5F7FA;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +40,5 @@
     transform: rotate(360deg);
   }
 }
+
+
