--- a/src/index.scss
+++ b/src/index.scss
@@ -9,73 +9,151 @@ $color-light-gray: #f5f7fa;
 
 html,
 body {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-	height: 100vh;
-	font-family: "Poppins", sans-serif;
-	font-size: 16px;
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
 
-	* {
-		box-sizing: border-box;
-		overflow: visible;
-		float: none;
-	}
+  * {
+    box-sizing: border-box;
+    overflow: visible;
+    float: none;
+  }
 
-	h1,
-	h2,
-	h3 {
-		padding: 0;
-		margin: 0;
-		font-weight: 600;
-	}
+  h1,
+  h2,
+  h3 {
+    padding: 0;
+    margin: 0;
+    font-weight: 600;
+  }
 }
 
 .main {
-	height: 100%;
-	background-color: $color-light-gray;
+  height: 100%;
+  background-color: $color-light-gray;
 }
 
 .headline {
-	text-align: center;
-	color: $color-white;
-	background-color: $primary-color;
-	padding: 12px 18px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  text-align: center;
+  color: $color-white;
+  background-color: $primary-color;
+  padding: 12px 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-	&__icon {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-	}
+  &__icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-	&__applicant {
-		display: flex;
-		flex-direction: column;
-		align-items: flex-end;
-		text-align: right;
+  &__applicant {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: right;
 
-		&-position {
-			font-weight: 400;
-			font-size: 0.75rem;
+    &-position {
+      font-weight: 400;
+      font-size: 0.75rem;
 
-			+ .headline__applicant-name {
-				margin-top: 5px;
-			}
-		}
-		&-name {
-			font-weight: 600;
-			font-size: 0.75rem;
-		}
-	}
+      + .headline__applicant-name {
+        margin-top: 5px;
+      }
+    }
+    &-name {
+      font-weight: 600;
+      font-size: 0.75rem;
+    }
+  }
 }
 
 .challenge {
-	padding: 18px;
-	font-size: 0.9rem;
+  padding: 18px;
+  font-size: 0.9rem;
+}
+
+.container-movies {
+  display: flex;
+  flex-direction: column;
+  max-width: 1100px;
+  margin: 40px auto;
+
+  .title {
+    h2 {
+      color: #0c1932;
+      font-size: 28px;
+      font-weight: 500;
+    }
+  }
+
+  .filters-info {
+	padding-bottom: 30px;
+	border-bottom: 1px solid #D8E1EB;
+	margin-bottom: 32px;
+  }
+
+  .container-list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+
+    .card {
+      margin-right: 16px;
+	  width: 240px;
+	  margin-bottom: 40px;
+	  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+      .image {
+        background-color: #abbbcc;
+        height: 160px;
+        border-radius: 12px 12px 0px 0px;
+      }
+
+      h5 {
+        margin: 0px 0px;
+      }
+
+      .margin-info {
+        margin-bottom: 10px;
+      }
+
+      span {
+        font-weight: 600;
+        font-size: 12px;
+        color: rgba(12, 25, 50, 0.8);
+      }
+
+      .info {
+        padding: 10px;
+		height: 168px;
+		background-color: #ffff;
+		border-radius: 12px 12px 0px 0px;
+
+        h3 {
+          font-size: 18px;
+          font-weight: 600;
+          color: #0c1932;
+        }
+
+        .budget-revenue {
+          display: flex;
+          justify-content: space-between;
+        }
+
+        .value {
+          color: rgba(12, 25, 50, 0.6);
+          font-size: 14px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
 }
